I have to investigate correct size of white space

--- a/app/assets/stylesheets/css3/_inline-block.scss
+++ b/app/assets/stylesheets/css3/_inline-block.scss
@@ -11,7 +11,7 @@
 
 // remove spaces from inline-blocks. this is hack, in general. The better way - remove it from HTML
 @mixin inline-block-fix {
-  letter-spacing: -.27em;
+  letter-spacing: -.3em;
 
   > * {
     letter-spacing: normal;
